@@ -12,7 +12,9 @@ digest_password_file = /etc/openwsman/digest_auth.passwd
 basic_password_file = /etc/openwsman/simple_auth.passwd
 
 min_threads = 4
-max_threads = 10
+max_threads = 0
+max_connections_per_thread=20
+#thread_stack_size=262144
 
 #use_digest is OBSOLETED, see below.
 
