@@ -92,6 +92,8 @@ static char *basic_authenticator = DEFAULT_BASIC_AUTH;
 static int max_threads = 1;
 static int min_threads = 4;
 static unsigned long enumIdleTimeout = 100;
+static char *thread_stack_size="0";
+static int max_connections_per_thread=20;
 
 static char *config_file = NULL;
 
@@ -179,12 +181,30 @@ int wsmand_read_config(dictionary * ini)
 	    iniparser_getstr(ini, "server:basic_authenticator_arg");
 	log_location = iniparser_getstr(ini, "server:log_location");
 	min_threads = iniparser_getint(ini, "server:min_threads", 1);
-	max_threads = iniparser_getint(ini, "server:max_threads", 4);
+	max_threads = iniparser_getint(ini, "server:max_threads", 0);
 	uri_subscription_repository = iniparser_getstring(ini, "server:subs_repository", DEFAULT_SUBSCRIPTION_REPOSITORY);
+        max_connections_per_thread = iniparser_getint(ini, "server:max_connextions_per_thread", 20);
+        thread_stack_size = iniparser_getstring(ini, "server:thread_stack_size", "0");
 #ifdef ENABLE_EVENTING_SUPPORT
 	wsman_server_set_subscription_repos(uri_subscription_repository);
 #endif
 	return 1;
+}
+
+int wsmand_options_get_max_connections_per_thread(void)
+{
+        return max_connections_per_thread;
+}
+
+unsigned int wsmand_options_get_thread_stack_size(void)
+{
+        errno=0;
+        unsigned int stack_size = strtoul(thread_stack_size,NULL,10);
+        if(errno){
+                debug("failed to convert string to unsigned int : %s", strerror(errno));
+                return 0;
+        }
+        return stack_size;
 }
 
 const char *wsmand_options_get_config_file(void)
@@ -305,6 +325,9 @@ char *wsmand_options_get_pid_file(void)
 
 int wsmand_options_get_max_threads(void)
 {
+//XXX: we might wish to return a constant 1 till the
+//MT issues on unix are solved. See compat_unix.h for
+//details on the issue.
 	return max_threads;
 }
 
