@@ -1,6 +1,15 @@
 2.2.2
-- Fix security risk when listing indication subscriptions (Suresh Sundriyal)
-- Fix xml namespace for enumeration and subscription filters
+- Major changes:
+  - Fix upper limit check for threads and their stack usage
+    Reintroduce max_thread config file parameter and two new parameters:
+    * max_connections_per_thread
+    * thread_stack_size
+    (Suresh Sundriyal)
+- Minor changes:
+  - Fix security risk when listing indication subscriptions (Suresh Sundriyal)
+  - Fix xml namespace for enumeration and subscription filters (kkaempf)
+  - Fix class names for swig bindings, makes Python bindings
+    operational (kkaempf)
 
 2.2.1
 - Major changes:
